Preparing exams on dec 31, 24

--- a/IPT/exam_questions.html
+++ b/IPT/exam_questions.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exams Questions</title>
+
+    <!-- Answer 01 -->
+    <!-- <meta http-equi='refresh' content='30'> -->
+
   </head>
   <body>
     <!-- this file is created by usama not include in extracted code -->
     <h1>Exams Questions</h1>
+
+    <!-- Answer 02 -->
+
+    <h1 id="hd1">Click button to hide</h1>
+
+    <button onclick="hideHeading()">Hide Heading</button>
+
+
+
 
     <script>
       const email = "jogndoe@company.com.uk";
@@ -15,19 +28,33 @@
 
       console.log(regex.test(email)); // Output: true
 
-    //   function myStery(array) {
-    //     const tmp = array[array.length - 1];
+      // Answer 03
+      
+      /*
+      function myStery(array) {
+        const tmp = array[array.length - 1];
 
-    //     for (let i = 0; i < array.length; i++) {
-    //       array[i] = array[i - 1];
-    //     }
+        for (let i = 0; i < array.length; i++) {
+          array[i] = array[i - 1];
+        }
 
-    //     array[0] = tmp;
-    //     return array;
-    //   }
+        array[0] = tmp;
+        return array;
+      }
 
-    //   const arrayList = [10, 20, 30, 40, 50];
-    //   console.log(myStery(arrayList));
+      const arrayList = [10, 20, 30, 40, 50];
+      console.log(myStery(arrayList));
+      */
+
+
+      // Answer 02
+/*
+      function hideHeading() {
+        const  heading = document.getElementById('hd1');
+        heading.style.display = 'none';
+
+      }
+*/
     </script>
   </body>
 </html>
