Keep learning Jan 01, 25

--- a/IPT/exam_questions.html
+++ b/IPT/exam_questions.html
@@ -7,7 +7,6 @@
 
     <!-- Answer 01 -->
     <!-- <meta http-equi='refresh' content='30'> -->
-
   </head>
   <body>
     <!-- this file is created by usama not include in extracted code -->
@@ -19,17 +18,18 @@
 
     <button onclick="hideHeading()">Hide Heading</button>
 
-
-
-
     <script>
+      // Answer 04
+
+      /*
       const email = "jogndoe@company.com.uk";
       const regex = /^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}(?:\.[a-z]{2,})?$/;
 
       console.log(regex.test(email)); // Output: true
+      */
 
       // Answer 03
-      
+
       /*
       function myStery(array) {
         const tmp = array[array.length - 1];
@@ -43,12 +43,11 @@
       }
 
       const arrayList = [10, 20, 30, 40, 50];
-      console.log(myStery(arrayList));
+      console.log(myStery(arrayList));  // [50, 10, 10, 10, 10]
       */
 
-
       // Answer 02
-/*
+      /*
       function hideHeading() {
         const  heading = document.getElementById('hd1');
         heading.style.display = 'none';
